Fix single-entry functions.
